--- a/dicee.html
+++ b/dicee.html
@@ -5,12 +5,12 @@
     <title>Dicee</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
-    <script src="js/dicee.js"></script>
+    <script src="js/dicee.js" async></script>
   </head>
   <body>
 
     <div class="container">
-      <h1>Refresh Me</h1>
+      <h1 class="winner">Refresh Me</h1>
 
       <div class="dice">
         <p>Player 1</p>
